css/sass/style.scss
/* ... */
#powerTip.n:before {
	bottom: -10px;
	border-top: 10px solid hsla(0, 0%, 0%, .9);
}
#powerTip.e:before {
	left: -10px;
	border-right: 10px solid hsla(0, 0%, 0%, .9);
}
#powerTip.s:before {
	top: -10px;
	border-bottom: 10px solid hsla(0, 0%, 0%, .9);
}
#powerTip.w:before {
	right: -10px;
	border-left: 10px solid hsla(0, 0%, 0%, .9);
}
#powerTip.ne:before, #powerTip.se:before {
	left: 10px;
	border-right: 10px solid transparent;
	border-left: 0;
}
#powerTip.nw:before, #powerTip.sw:before {
	right: 10px;
	border-left: 10px solid transparent;
	border-right: 0;
}
#powerTip.ne:before, #powerTip.nw:before {
	bottom: -10px;
	border-top: 10px solid hsla(0, 0%, 0%, .9);
}
#powerTip.se:before, #powerTip.sw:before {
	top: -10px;
	border-bottom: 10px solid hsla(0, 0%, 0%, .9);
}


/* *****************************************************************************
	 3. &gSTYLING
	 ************************************************************************** */
/* =============================================================================
	 3.a &Typography
	 ========================================================================== */
/*
 * The following styles ensure that font sizes can be reused in markup
 * rather than applying the same font-size value to multiple selectors.
 *
 * All line heights are 24px to ensure a consistent vertical rhythm.
 * Line heights should be set to match line-height set on body.
 *
 */

/*
 * Common margin-bottom for vertical rhythm.
 */
h1, h2, h3, h4, h5, h6,
ul, ol, dl,
fieldset,
p,
table,
pre,
hr {
	margin-top: $unit-default-px;
	margin-top:1rem;
	margin-bottom: $unit-default-px;
	margin-bottom:1rem;
}

/*
 * Massive type
 */
.fs-giga { font-size: 80px; font-size: 5.714rem; line-height: 1;}
.fs-mega { font-size: 56px; font-size: 4rem; line-height: 1;}
.fs-kilo { font-size: 44px; font-size: 3.143rem; line-height: 1;}

/*
 * Define headings and their associated classes here.
 */
h1, .fs-alpha   { font-size: 32px; font-size: 2.286rem; line-height: 1;}
h2, .fs-beta    { font-size: 28px; font-size: 2em; line-height: 1;}
h3, .fs-gamma   { font-size: 24px; font-size: 1.714rem; line-height: 1;}
h4, .fs-delta   { font-size: 20px; font-size: 1.429rem; line-height: 1; }
h5, .fs-epsilon { font-size: 18px; font-size: 1.286rem; line-height: 1;}
h6, .fs-zeta    { font-size: 16px; font-size: 1.143rem; line-height: 1;}

/*
 * Smaller-than-body-copy sizes here.
 */
.fs-milli { font-size:12px; font-size:0.857rem; line-height: 1;}
.fs-micro { font-size: 10px; font-size: 0.625rem; line-height: 1;}


/* -----------------------------------------------------------------------------
	 3.a.i &Headers
	 -------------------------------------------------------------------------- */
h1, h2, h3, h4, h5, h6 { font-weight: normal;}


/* -----------------------------------------------------------------------------
	 3.a.ii &Lists
	 -------------------------------------------------------------------------- */
.list-reset {
	list-style-type: none;
	padding: 0;
	margin: 0;
}


/* -----------------------------------------------------------------------------
	 3.a.iii &Horizontal Rules
	 -------------------------------------------------------------------------- */


/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	 3.a.iv &mTypography
	 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
.error { color: #CC3333;}

/* font-family modifiers */
.ff-mono { font-family: monospace;}

/* case modifiers */
.case-u { text-transform: uppercase;}
.case-l { text-transform: lowercase;}
.case-n { text-transform: none;}
.case-c { text-transform: capitalize;}

/* vertical align modifiers */
.va-t { vertical-align: top;}
.va-m { vertical-align: middle;}
.va-b { vertical-align: bottom;}
.va-bl { vertical-align: baseline;}
.va-sup { vertical-align: super;}
.va-sub { vertical-align: sub;}
.va-tt { vertical-align: text-top;}
.va-tb { vertical-align: text-bottom;}


/* ==|== WordPress / Helper editor styles ======================================
	 ========================================================================== */
/* Floating & Alignment */
.fl{ float: left;}
.fr{ float: right;}
.al{ text-align: left;}
.ac{ text-align: center;}
.ar{ text-align: right;}

/* Alignment (post images) */
.aligncenter { display: block; margin-left: auto; margin-right: auto;}
.alignleft { display: inline; float: left; margin: 5px $unit-default-px 5px 0;}
.alignright { display: inline; float: right; margin: 5px 0 5px $unit-default-px;}


/* =============================================================================
	 3.b &Backgrounds & Borders
	 ========================================================================== */


/* =============================================================================
	 3.c &Layout
	 ========================================================================== */
/* use to set max width of content areas */
.wrap {
	margin: 0;
	padding-left: $unit-default-px;
	padding-left: 1rem;
	padding-right: $unit-default-px;
	padding-right: 1rem;
}


/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	 &mLayout
	 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* display level modifiers */
.d-block { display: block;}

/* required for <button>, <input>, and <textarea>*/
input.d-block,
textarea.d-block,
button.d-block { width: 100%;}

.d-iblock { display: inline-block;}


/* =============================================================================
	 3.d &Helpers
	 ========================================================================== */
/*
 * For image replacement: http://mopo.ws/wj7fIN
 * Nicholas Gallagher's detailed post on new .ir - http://mopo.ws/wHCSUu
 * Causes issues with em based margins on elements using .ir
 */
.ir { background-color: transparent; border: 0; overflow: hidden;}

.ir:before { content: ""; display: block; width: 0; height: 150%;}
/* ... */

